# chrisslyengine

./: .gitignore  license.txt  readme.md
android/: building_chrissly_android.txt  exportassets.cmd
android/ChrisslyEngine_Android/: .project  AndroidManifest.xml  build.cmd  clean.cmd  exportassets.cmd  rebuild.cmd
android/ChrisslyEngine_Android/assets/: license.txt
android/ChrisslyEngine_Android/jni/: Android.mk  main.cpp
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
assets/: license.txt
assets/materials/: materials.material
assets/meshes/: mage.mesh
assets/textures/: cerberus.raw  cerberus_etc1.pkm  cerberus_etc1.raw  floor.raw  gothic_alpha_dxt3.raw  gothic_solid_dxt1.raw  mage_etc1.raw  sphere_env_map.raw
assets/textures/windows/: gothic_alpha.raw  gothic_solid.raw
code/: chrisslyconfig.h
code/application/: state.h  statemanager.cpp  statemanager.h
code/audio/: audioformat.h  audiorenderer.h  audiosystem.cpp  audiosystem.h  channel.cpp  channel.h  channelbase.cpp  channelbase.h  codec.h  dsp.cpp  dsp.h  errorcode.h  modeflags.h  propertychangedflags.h  sound.cpp  sound.h  soundbase.cpp  soundbase.h  soundtype.h  vorbiscodec.cpp  vorbiscodec.h  wavcodec.cpp  wavcodec.h
code/audio/android/: slesaudiorenderer.cpp  slesaudiorenderer.h  sleschannel.cpp  sleschannel.h  slessound.cpp  slessound.h
code/audio/dsp/: filters.cpp  filters.h  mixer.cpp  mixer.h  samplerateconverter.cpp  samplerateconverter.h
code/audio/psp/: pspaudiorenderer.cpp  pspaudiorenderer.h  pspchannel.cpp  pspchannel.h
code/audio/sles/: slesaudiorenderer.cpp  slesaudiorenderer.h  sleschannel.cpp  sleschannel.h  slessound.h
code/audio/wasapi/: wasapiaudiorenderer.cpp  wasapiaudiorenderer.h
code/audio/windows/: wasapiaudiorenderer.cpp  wasapiaudiorenderer.h
code/core/: chrisslyarray.h  chrisslylocale.h  chrisslymath.h  chrisslymemory.cpp  chrisslymemory.h  chrisslymutex.h  chrisslyplatform.h  chrisslystring.cpp  chrisslystring.h  damping.cpp  damping.h  debug.h  dynamicarray.h  filehandle.h  fileio.h  fswrapper.h  hashtable.h  intersection.cpp  intersection.h  linkedlist.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  memoryallocatorconfig.h  miscutils.h  parserutils.h  plane.cpp  plane.h  quaternion.cpp  quaternion.h  staticcoroutine.h  timer.cpp  timer.h  vector3.cpp  vector3.h
code/core/android/: androiddebug.cpp  androiddebug.h  androidfswrapper.cpp  androidfswrapper.h  androidmath.cpp  androidmath.h  posixmutex.h  standardmath.h
code/core/posix/: posixmutex.h
code/core/psp/: pspdebug.cpp  pspdebug.h  pspfswrapper.cpp  pspfswrapper.h  pspmath.cpp  pspmath.h  pspmutex.h
code/core/standard/: standardmath.h
code/core/windows/: winapidebug.cpp  winapidebug.h  winapifswrapper.cpp  winapifswrapper.h  winapimutex.h
code/graphics/: animation.cpp  animation.h  animationstate.cpp  animationstate.h  animationtrack.cpp  animationtrack.h  blendmode.h  camera.cpp  camera.h  common.h  entity.cpp  entity.h  gpuprogram.h  gpuprogrammanager.cpp  gpuprogrammanager.h  gpuprogramparams.cpp  gpuprogramparams.h  graphicssystem.cpp  graphicssystem.h  hardwarevertexbuffer.h  hardwarevertexbufferbase.cpp  hardwarevertexbufferbase.h  keyframe.cpp  keyframe.h  light.cpp  light.h  material.cpp  material.h  materialmanager.cpp  materialmanager.h  materialparser.cpp  materialparser.h  mesh.cpp  mesh.h  meshmanager.cpp  meshmanager.h  node.cpp  node.h  pass.cpp  pass.h  (+32 more)
code/graphics/android/: eglrenderwindow.cpp  eglrenderwindow.h  gles2debug.cpp  gles2debug.h  gles2defaultshaders.h  gles2gpuprogram.cpp  gles2gpuprogram.h  gles2hardwarevertexbuffer.cpp  gles2mappings.cpp  (+10 more)
code/input/: chrisslyinput.h  chrisslyinputplatform.h
code/physics/: rigidbody.cpp  rigidbody.h  vehicle.cpp  vehicle.h  wheel.cpp  wheel.h
psp/: ChrisslyEngine_PSP.pnproj  ChrisslyEngine_PSP.pnps  Makefile  Projects.ppg  building_chrissly_psp.txt  copytopsp.cmd  export_animations.cmd  export_materials.cmd  export_meshes.cmd  export_textures.cmd  exportassets.cmd  startemulator.cmd
psp/assets/: Thumbs.db  license.txt
psp/code/: main.cpp
tools/blender/: io_export_chrisslymesh.py
windows/: ChrisslyEngine_Windows.sln  building_chrissly_windows.txt  export_audio.cmd  export_materials.cmd  export_meshes.cmd  export_textures.cmd  exportassets.cmd
windows/ChrisslyEngine_Windows/: ChrisslyEngine_Windows.vcxproj  ChrisslyEngine_Windows.vcxproj.filters  main.cpp
(+90 files in other folders)
